# AoC_2025

./: .gitignore  README.md  pyproject.toml
day02/: part1.sh  part2.sh
day03/: part1.sql  part2.sql  setup_db.py  write_input_to_sql.py
day04/: part1.m
day05/: part1.jl
day06/: README.md  shader_f64.wgsl  shader_u32x2.wgsl  solution.html  solution.ts
day07/: Cargo.toml
day07/src/: main.rs
day08/: part1.py  part2.py  solution.py  visualize.py
day09/: README.md  part1.py  part2.py  solution.html  solution.py  visualize.py
day1/: solution.xlsx
day10/: part1.cu  part1.py  part2.cu  part2.py
day11/: notebook.py  solution.py
day12/: create_model.py  run_inference.py  visualize.py
day12/betterinput/: README.md  check_solution.py  create_better_input.py  solution.txt
day12/lazysolution/: plot_fill_ratio.py  solution.py
day3/: part2.sql
day4/: part1.m  solution.m
day5/: solution.jl
images/: create_langs_svg.py
