[project]
name = "aoc-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "cachetools>=6.2.2",
    "cupy-cuda12x>=13.6.0",
    "duckdb>=1.4.3",
    "flask>=3.1.2",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mo>=0.3.0",
    "networkx>=3.6.1",
    "numpy>=2.2.6",
    "openvino>=2025.4.0",
    "ortools==9.14.6206",
    "pillow>=12.0.0",
    "polars>=1.36.1",
    "pycairo>=1.29.0",
    "requests>=2.32.5",
    "svgwrite>=1.4.3",
]
